--- a/index.css
+++ b/index.css
@@ -1,7 +1,16 @@
 body {
+    color:black
     background-color: rgb(red, green, blue);
+    font-family: Arial, Helvetica, sans-serife;
 }
 
+ul {
+    display:flex;
+    justify-content: space-between;
+    list-style-type: none;
+    align-items: center;
+    padding: 16px;
+}
 
 
 
