--- a/index.css
+++ b/index.css
@@ -17,4 +17,10 @@ a {
      text-decoration:none;
 }
 
+img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 5px solid green;
+}
 
