--- a/index.css
+++ b/index.css
@@ -23,4 +23,16 @@ img {
   border-radius: 50%;
   border: 5px solid green;
 }
+.center {
+    text-align: center;
+}
+
+h1 {
+    color:turquoise
+}
+
+
+
+
+
 
