--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ a {
      text-decoration:none;
 }
 
-img {
+header img {
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -31,6 +31,10 @@ h1 {
     color:turquoise
 }
 
+footer img {
+    width: 40px;
+    height: 40px;
+  }
 
 
 
