--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
-    color:black;
-    background-color: rgb(red, green, blue);
+    color:red;
+    background-color:black;
     font-family: Arial, Helvetica, sans-serife;
 }
 
